@startuml application-architecture
!define PRESENTATION_LAYER #E3F2FD
!define BUSINESS_LAYER #F3E5F5
!define DATA_LAYER #E8F5E9
!define EXTERNAL #FFF3E0

skinparam linetype ortho

skinparam component {
    BackgroundColor<<Presentation>> PRESENTATION_LAYER
    BackgroundColor<<Business>> BUSINESS_LAYER
    BackgroundColor<<Data>> DATA_LAYER
    BackgroundColor<<External>> EXTERNAL
    BorderColor #333333
    ArrowColor #333333
}

title TOGAF Application Architecture - FinPulse Fintech Platform

package "Presentation Layer" <<Presentation>> {
    component "apps/web" as WebApp {
        component "Angular 21 App" as AngularApp {
            component "App Router" as AppRouter
            component "Components" as Components
            component "Services" as Services
            component "Layout" as Layout
        }
    }

    component "@fintech/ui" as UIComponent {
        component "Base UI" as BaseUI
        component "Radix UI Primitives" as RadixPrimitives
    }

    component "Chart Libraries (Web)" as ChartLibrariesWeb {
        component "Chart.js" as ChartJS
        component "ng2-charts" as Ng2Charts
        component "chartjs-chart-financial" as ChartJSFinancial
        component "ag-grid-angular" as AgGrid
    }

    component "apps/mobile-portfolio" as MobilePortfolio {
        component "Expo + React Native" as ExpoRN
        component "Stocks screen" as StocksScreen {
            component "StockListItem" as StockListItem
            component "NativeSparkline" as NativeSparkline
            component "useRealtimeQuotes" as UseRealtimeQuotes
            component "usePerSymbolHistory" as UsePerSymbolHistory
        }
        component "NativeDemoCard (demo native card)" as NativeDemoCard {
            component "iOS RCTViewManager" as NativeDemoCardIOS
            component "Android SimpleViewManager" as NativeDemoCardAndroid
        }
        component "Native Charts" as NativeCharts {
            component "NativeLineChart" as NLC
            component "NativeCandleChart" as NCC
            component "NativeAmericanLineChart" as NALC
            component "NativeBaselineChart" as NBC
            component "NativeHistogramChart" as NHC
            component "NativeLineOnlyChart" as NLOC
            component "iOS Metal (MTKView)" as NativeChartsIOS
            component "Android OpenGL ES 3" as NativeChartsAndroid
        }
        component "Native chart support (OOP)" as NativeChartSupport {
            component "iOS ChartSupport" as IOSChartSupport
            component "Android view/chart/" as AndroidChartPkg
        }
        component "Shared chart logic" as SharedChartLogic {
            component "useScrollableChart" as UseScrollableChart
            component "ScrollableChartContainer" as ScrollableChartContainer
            component "chartTooltip" as ChartTooltip
        }
        component "react-native-wagmi-charts" as RNCharts
    }
    note right of MobilePortfolio: Default dark theme\nBlack (#000000) background
}

package "Business Layer" <<Business>> {
    component "@fintech/utils" as UtilsPkg {
        component "Utils" as Utils
    }

    package "Application Modules (Web)" {
        component "Portfolio Module" as PortfolioModule {
            component "Portfolio Controller" as PortfolioController
            component "Asset Service" as AssetService
        }

        component "Market Module" as MarketModule {
            component "Market Controller" as MarketController
            component "Trend Service" as TrendService
        }

        component "Transaction Module" as TransactionModule {
            component "Transaction Controller" as TransactionController
            component "Transaction Service" as TransactionService
        }

        component "Risk Module" as RiskModule {
            component "Risk Controller" as RiskController
            component "Risk Service" as RiskService
        }
    }
}

package "Data Access Layer" <<Data>> {
    component "HTTP Client" as HttpClient {
        component "Portfolio API Client" as PortfolioAPIClient
        component "Market Data Client" as MarketDataClient
    }

    component "State Management" as StateMgmt {
        component "Angular Services" as AngularServices
        component "RxJS" as RxJS
    }
}

package "External Services" <<External>> {
    component "Vercel" as VercelServices {
        component "Vercel Analytics" as Analytics
        component "Vercel Platform" as VercelPlatform
    }

    component "Third-party APIs" as ThirdPartyAPI {
        component "Market Data API" as MarketAPI
        component "Finance API" as FinanceAPI
    }

    component "Portfolio Analytics API" as PortfolioAnalyticsAPI <<External>> {
        component "FastAPI app (DDD)" as FastAPIApp
        component "GET /api/v1/portfolio" as PortfolioGet
        component "POST /api/v1/seed" as PortfolioSeed
        component "GET /api/v1/quotes" as QuotesGet
        component "WebSocket /ws/quotes" as QuotesWS
        component "MarketDataService + KafkaMarketDataProvider" as MarketDataServiceComponent
        component "AI/ML /api/v1/ai" as AIMLAPI {
            component "VaR, fraud, surveillance" as AIML1
            component "sentiment, identity, forecast" as AIML2
            component "Ollama, Hugging Face, TF" as AIML3
        }
        component "SQLAlchemy 2.0 + asyncpg + Alembic" as SQLAlchemyStack
        component "TimescaleDB (portfolio + history)" as TimescaleDB
        component "Redis (history cache)" as RedisDB
        component "Kafka (portfolio.events)" as KafkaTopic
        component "Kafka (market.quotes.enriched)" as KafkaQuotesTopic
    }

}

interface "Portfolio API" as PortfolioAPI
interface "Market Data API" as MarketDataAPI
interface "Transaction API" as TransactionAPI
interface "Risk API" as RiskAPI

' Mobile portfolio native views
ExpoRN --> StocksScreen
StocksScreen --> StockListItem
StockListItem --> NativeSparkline
StocksScreen --> UseRealtimeQuotes
StocksScreen --> UsePerSymbolHistory
ExpoRN --> NativeDemoCard
NativeDemoCard --> NativeDemoCardIOS
NativeDemoCard --> NativeDemoCardAndroid
ExpoRN --> NativeCharts
NativeCharts --> NativeChartSupport
NativeChartSupport --> IOSChartSupport
NativeChartSupport --> AndroidChartPkg
NativeCharts --> NLC
NativeCharts --> NCC
NativeCharts --> NALC
NativeCharts --> NBC
NativeCharts --> NHC
NativeCharts --> NLOC
NLC --> NativeChartsIOS
NLC --> NativeChartsAndroid
NCC --> NativeChartsIOS
NCC --> NativeChartsAndroid
NALC --> NativeChartsIOS
NALC --> NativeChartsAndroid
NBC --> NativeChartsIOS
NBC --> NativeChartsAndroid
NHC --> NativeChartsIOS
NHC --> NativeChartsAndroid
NLOC --> NativeChartsIOS
NLOC --> NativeChartsAndroid
ExpoRN --> SharedChartLogic
NativeCharts --> SharedChartLogic
MobilePortfolio --> RNCharts
MobilePortfolio --> PortfolioAnalyticsAPI
MobilePortfolio --> QuotesWS
FastAPIApp --> PortfolioGet
FastAPIApp --> PortfolioSeed
FastAPIApp --> QuotesGet
FastAPIApp --> QuotesWS
FastAPIApp --> AIMLAPI
FastAPIApp --> SQLAlchemyStack
SQLAlchemyStack --> TimescaleDB
FastAPIApp --> RedisDB
FastAPIApp --> KafkaTopic
FastAPIApp --> MarketDataServiceComponent
MarketDataServiceComponent --> KafkaQuotesTopic

AngularApp --> AppRouter
AngularApp --> Components
AngularApp --> Services
AppRouter --> Layout
WebApp --> UIComponent
WebApp --> ChartLibrariesWeb
BaseUI --> RadixPrimitives
ChartLibrariesWeb --> ChartJS
ChartLibrariesWeb --> Ng2Charts
Ng2Charts --> ChartJS
ChartJSFinancial --> ChartJS

PortfolioController --> AssetService
MarketController --> TrendService
TransactionController --> TransactionService
RiskController --> RiskService

WebApp --> PortfolioModule
WebApp --> MarketModule
WebApp --> TransactionModule
WebApp --> RiskModule
PortfolioModule --> UtilsPkg
MarketModule --> UtilsPkg
RiskModule --> UtilsPkg

PortfolioModule --> HttpClient
MarketModule --> HttpClient
TransactionModule --> HttpClient
RiskModule --> HttpClient

PortfolioModule --> StateMgmt
MarketModule --> StateMgmt
TransactionModule --> StateMgmt

HttpClient --> PortfolioAnalyticsAPI
HttpClient --> ThirdPartyAPI
WebApp --> VercelServices

PortfolioAnalyticsAPI ..> PortfolioAPI : implements
ThirdPartyAPI ..> MarketDataAPI : consumes

legend right
    |<#E3F2FD> Presentation | UI and interaction
    |<#F3E5F5> Business Layer | Core business
    |<#E8F5E9> Data Access | Data management
    |<#FFF3E0> External | Third-party services
endlegend

@enduml
